fix: text-align at moviesCard

--- a/src/components/movies/moviesCard/MoviesCard.css
+++ b/src/components/movies/moviesCard/MoviesCard.css
@@ -9,6 +9,7 @@
 .moviesCard__text-container {
   display: flex;
   justify-content: space-between;
+  text-align: left;
 }
 
 .moviesCard__name {
